--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="home">
     <div class="page-header">
   		<h2 class="text-capitalize"></h2>
-        <img id="img1" src="gif.jpg" class="img-responsive">
+        <img id="img1" src="gif.jpg"height=100px class="img-responsive">
     </div>
           </section>
        <!---->
